# FlexCFD-old

./: .clang-format  .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  README.md
.github/workflows/: ci.yml
Example/: Casulliwrap.cpp  CmakeLists.txt  petscmain.cpp
Numerics/: CMakeLists.txt  GetIndex.hpp  IterCallbacks.hpp  SolTools.hpp
Numerics/casulliwrap/: CasulliWrap.hpp
Numerics/petscwrap/: PetscWrap.cpp  PetscWrap.hpp
PDEs/: CMakeLists.txt  ModelParams.hpp  PDEParams.hpp  PDESystem.hpp
PDEs/SVE/: SVE.hpp  SVECas.hpp
PDEs/SWE/: SWE2d.hpp  SWE2dCas.hpp
Utils/itertools/: CMakeLists.txt  IterTools.hpp  SquareRange.hpp
cmake/: configure.cmake  dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
examples/: CMakeLists.txt
examples/Casulliwrap/: SVECas.cpp  SWE2dCas.cpp
examples/petscwrap/: SVE.cpp  SWE2d.cpp
source/: CMakeLists.txt
source/numerics/: CMakeLists.txt  GetIndex.hpp  IterCallbacks.hpp  SolTools.hpp
source/numerics/casulliwrap/: CasulliMethodProps.hpp  CasulliWrap.hpp
source/numerics/petscwrap/: PetscInitException.hpp  PetscOptions.hpp  PetscUtils.cpp  PetscUtils.hpp  PetscWrap.hpp
source/pdes/: BoundaryCondition.hpp  CMakeLists.txt  GridParams.hpp  PDESystem.hpp  PDEType.hpp
source/pdes/sve/: SVE.hpp  SVECas.hpp
source/pdes/swe/: SWE2d.hpp  SWE2dCas.hpp
source/utils/: CMakeLists.txt  TriangleRange.hpp
